# cpp_alpha_vantage

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  stocks.config
doc/html/: api_8h.html  api_8h__incl.md5  classApi-members.html  classApi.html  classConfig-members.html  classConfig.html  classPlot-members.html  classgnuplotio_1_1ArrayTraits-members.html  classgnuplotio_1_1ArrayTraits.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tuple_3_518ec169aa4c0a170d8de8313b4be85a.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tuple_3_6d532ce669f7e2ed03e71984b00f1980.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__like__stl__cont54b0e8d42e907baf2ee3a3f730136764.map  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__like__stl__cont54b0e8d42e907baf2ee3a3f730136764.md5  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__like__stl__container_3_01T_01_4_01_4_01_4.html  classgnuplotio_1_1ArrayTraits_3_01T_01_6_01_4.html  classgnuplotio_1_1ArrayTraits_3_01T_01_6_01_4__inherit__graph.map  classgnuplotio_1_1ArrayTraits_3_01T_01_6_6_01_4__inherit__graph.map  classgnuplotio_1_1ArrayTraits_3_01T_01_6_6_01_4__inherit__graph.md5  classgnuplotio_1_1ArrayTraits_3_01T_0fN_0e_4-members.html  classgnuplotio_1_1ArrayTraits_3_01T_0fN_0e_4__coll__graph.map  classgnuplotio_1_1ArrayTraits_3_01T_0fN_0e_4__coll__graph.md5  classgnuplotio_1_1ArrayTraits_3_01std_1_1pair_3_01T_00_01U_01_4_01_4.html  classgnuplotio_1_1ArrayTraits_3_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4-members.html  classgnuplotio_1_1ArrayTraits_3_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4.html  classgnuplotio_1_1ArrayTraits_3_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4__inherit__graph.map  classgnuplotio_1_1ArrayTraits__inherit__graph.md5  classgnuplotio_1_1BinarySenderNotImplemented-members.html  classgnuplotio_1_1BinarySenderNotImplemented.html  classgnuplotio_1_1BinarySenderNotImplemented__coll__graph.map  classgnuplotio_1_1BinarySenderNotImplemented__coll__graph.md5  classgnuplotio_1_1Gnuplot-members.html  classgnuplotio_1_1Gnuplot.html  classgnuplotio_1_1GnuplotFeedback-members.html  classgnuplotio_1_1GnuplotTmpfileCollection.html  classgnuplotio_1_1IteratorRange-members.html  classgnuplotio_1_1IteratorRange.html  classgnuplotio_1_1PairOfRange-members.html  classgnuplotio_1_1PairOfRange.html  classgnuplotio_1_1PlotData.html  classgnuplotio_1_1PlotGroup-members.html  (+257 more)
docs/: README_8md.html  annotated.html  api_8cpp.html  api_8cpp__incl.map  api_8cpp__incl.md5  api_8h.html  api_8h__dep__incl.map  api_8h__dep__incl.md5  api_8h__incl.map  api_8h__incl.md5  api_8h_source.html  api__test_8cpp.html  api__test_8cpp__incl.map  api__test_8cpp__incl.md5  api__test_8cpp_ac53000f12bb0080bdde1c8ea3c6f6c7f_cgraph.map  api__test_8cpp_ac53000f12bb0080bdde1c8ea3c6f6c7f_cgraph.md5  classApi-members.html  classApi.html  classApi__coll__graph.map  classApi__coll__graph.md5  classConfig-members.html  classConfig.html  classConfig__coll__graph.map  classConfig__coll__graph.md5  classPlot-members.html  classPlot.html  classPlot__coll__graph.map  classPlot__coll__graph.md5  classStock-members.html  classStock.html  classStock__coll__graph.map  classStock__coll__graph.md5  classes.html  classgnuplotio_1_1ArrayTraitsDefaults-members.html  classgnuplotio_1_1ArrayTraitsDefaults.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tuple_3_56785a0ddc06586e14cc5425f7c7b73c.map  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tuple_3_e90420b81e630872eca73b341849dab1.map  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__like__stl__cont7eff20365535eac642525a8b5b2adf31.html  classgnuplotio_1_1ArrayTraits_3_01T_01_6_01_4-members.html  classgnuplotio_1_1ArrayTraits_3_01T_01_6_01_4__inherit__graph.md5  (+225 more)
docs/html/: annotated.html  api_8h__incl.map  api_8h_source.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tuple_3_56785a0ddc06586e14cc5425f7c7b73c.md5  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tuple_3_88172e3c7e3631e07d58d764bad4c6f6.md5  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tuple_3_bab19c2aec897dc1b727b4038b3d3a93.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01std_1_1enable__if__t_3_01is__boost__tuple_3_bd6c2a8b98d354b894fc7a1b5963ede0.html  classgnuplotio_1_1ArrayTraits_3_01T_01_6_6_01_4-members.html  classgnuplotio_1_1ArrayTraits_3_01T_01_6_6_01_4.html  classgnuplotio_1_1ArrayTraits_3_01T_0fN_0e_4.html  inherit_graph_11.map  (+125 more)
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  api.cpp  api.h  cert_path.h
(+64 files in other folders)
